Fix white space under html

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,11 @@ div{
 html{
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 body{
     margin: 0px;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-content: space-between;
@@ -140,5 +142,19 @@ p{
 
 .image-texts{
     color: rgb(168, 168, 168);
+}
+
+/*THIRD SECTION*/
+
+.third-section{
+    background-color: #538ae2;
+}
+
+.testimonial{
+    display: inline-block;
+    text-align: center, justify;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding: 5px;
 }
 
